diarity-k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homeserver-apps
  labels:
    name: homeserver-apps
    environment: production
