diarity-k8s/spring-boot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
  namespace: homeserver-apps
  labels:
    app: spring-boot-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 9091
      targetPort: 9091
      protocol: TCP
      name: actuator
  selector:
    app: spring-boot-app
